--- a/nvim/.config/goneovim/settings.toml
+++ b/nvim/.config/goneovim/settings.toml
@@ -1,24 +1,19 @@
 ## Goneovim settings.toml
 ## All of the following commented configuration items have default values.
-
 [Editor]
 ## Makes the application window frameless.
 # BorderlessWindow = false
-
 ## Editor minimum window width (>= 400)
 Width = 800
 ## Editor minimum window height (>= 300)
 Height = 600
 ## Create a small margin on the left and right sides of the application window.
 # Gap = 2
-
 ## This option makes the whole GUI window in semi-transparent.
 ## This setting also implicitly enables the Drawborder setting
 # Transparent = 1.0
-
 ## Launch goneovim with full screen window size.
 # StartFullscreen = false
-
 ## Editor external font-family, font-size, and linespace.
 ## This is the font and linespace settings of the graphical UI as an nvim front end.
 ## For example, linespace affects the margins of the external completion popup menu UI.
@@ -36,66 +31,60 @@ Height = 600
 #FontSize = 11
 ### linespace is
 #Linespace = 3
-
 ## Neovim external UI features
 ## The following is the default value of goneovim.
 ## You can change the behavior of the GUI by changing the following boolean values.
 ## If you prefer the traditional Vim UI, set it to false for all.
 ## Also, `ExtMessages` is still experimental at this time and we don't recommend setting it to true if you want stability.
-ExtCmdline   = true
+ExtCmdline = true
 ExtPopupmenu = true
-ExtTabline   = true
-ExtMessages  = true
-
+ExtTabline = true
+ExtMessages = true
 ## Goneovim has a cached rendering feature enabled to speed up the process.
 ## If you want to disable it, set it to false
 # CachedDrawing = true
 ## You can specify the cache size to be used by the cache rendering feature of goneovim.
 ## The default is 400.
 # CacheSize = 400
-
 ## Disables font ligatures.
 # DisableLigatures = true
-
 ## Copy yanked text to clipboard
 Clipboard = true
-
 ## This setting is equivalent to Macmeta in MacVim.
 # Macmeta = true
-
 ## The input method editor will be automatically disabled when the mode is changed to normal mode.
 ## It may be useful for users who use the input method editor (e.g. East Asian users).
 ## DisableImeInNormal = false
-
 ## Draw borders on the GUI side instead of the vertical border and status line that nvim draws.
 DrawWindowSeparator = true
 WindowSeparatorTheme = "dark"
 # WindowSeparatorColor = "#2222ff"
 # WindowSeparatorGradient = false
-
 ## Draw built-in indent guide
 ## Enabling this setting will have a slight impact on performance.
 IndentGuide = true
-IndentGuideIgnoreFtList = ["md", "fennel", "clojure", "lisp", "dashboard", "packer"]
+IndentGuideIgnoreFtList = [
+    "md",
+    "fennel",
+    "clojure",
+    "lisp",
+    "dashboard",
+    "packer"
+]
 OptionsToUseGuideWidth = "shiftwidth"
 ## Animates the scrolling behavior of Neovim when the scroll command is entered.
 SmoothScroll = true
 ## Disables horizontal scrolling for smooth scrolling with the touchpad.
 # DisableHorizontalScroll = true
-
 ## Draw border on a float window
 # DrawBorderForFloatWindow = true
-
 ## Draw shadow under a float window
 DrawShadowForFloatWindow = true
-
 ## Enable desktop notification settings for nvim messages.
 ## This option works only if `ExtMessages` is enabled.
 DesktopNotifications = true
-
 # Display the effect when clicked
 ClickEffect = true
-
 # Pattern that fills the diff background
 # Change the background pattern used for diff display.
 # This option allows you to use a visual effect pattern such as Dense, Diagonal Stripe instead of a regular solid pattern.
@@ -119,7 +108,7 @@ ClickEffect = true
 # // RadialGradientPattern    16
 # // ConicalGradientPattern   17
 # // TexturePattern           24
-DiffAddPattern    = 1
+DiffAddPattern = 1
 DiffDeletePattern = 1
 DiffChangePattern = 1
 
@@ -129,8 +118,6 @@ DiffChangePattern = 1
 ##  let g:hoge = 'fuga'
 ## '''
 # Ginitvim = ""
-
-
 ## The palette is used as an input UI for externalized command lines and the Fuzzy-Finder feature built into Goneovim.
 # [Palette]
 ## Specifies the proportion of the command line palette to the height of the entire window.
@@ -139,23 +126,17 @@ DiffChangePattern = 1
 # MaxNumberOfResultItems = 30
 ## Specifies the opacity of the command line palette.
 # Transparent = 1.0
-
-
 ## Configure externalized message UI.
 # [Message]
 ## Specifies the opacity of the message window.
 # Transparent = 1.0
-
-
 ## The statusline configuration below relates to the display of Goenovim's own external status lines.
 ## If you want to use neovim's status line plugin, you should disable its display.
 [Statusline]
 ## Whether or not to display the external status line
 Visible = true
-
 ## Options: "textLabel" / "icon" / "background" / "none"
 ModeIndicatorType = "textLabel"
-
 ## Optional setting colors per Neovim editing modes
 # NormalModeColor = "#3cabeb"
 # CommandModeColor = "#5285b8"
@@ -163,18 +144,23 @@ ModeIndicatorType = "textLabel"
 # ReplaceModeColor = "#ff8c0a"
 # VisualModeColor = "#9932cc"
 # TerminalModeColor = "#778899"
-
 ## Statusline components
-Left = [ "mode", "filepath", "filename" ]
-Right = [ "message", "git", "filetype", "fileformat", "fileencoding", "curpos", "lint" ]
-
+Left = ["mode", "filepath", "filename"]
+Right = [
+    "message",
+    "git",
+    "filetype",
+    "fileformat",
+    "fileencoding",
+    "curpos",
+    "lint"
+]
 
 ### Configure externalized tabline UI.
 [Tabline]
 ### Whether or not to display the external tabline
 Visible = true
 ShowIcon = true
-
 
 ## Configure externalized popupmenu UI.
 [Popupmenu]
@@ -186,28 +172,20 @@ ShowIcon = true
 ## The following options specify whether to display a dedicated column in the popupmenu
 ## to display the long text displayed in the `info` part.
 ShowDetail = true
-
 ## total number to display item
 # Total = 20
-
 ## width of `menu` column
 # MenuWidth = 400
-
 ## width of `info` column
 # InfoWidth = 1
-
 ## width of `detail` column
 # DetailWidth = 250
-
 ## Show digit number which can select item for popupmenu
 ShowDigit = true
-
 
 [ScrollBar]
 ## Specifies whether to show the external scrollbar or not.
 Visible = true
-
-
 # [MiniMap]
 # ## To view the minimap, launch an additional nvim instance;
 # ## setting Disable to true will not launch this additional nvim instance
@@ -216,44 +194,30 @@ Visible = true
 #
 # ## Specifies whether to show the minimap or not.
 # Visible = true
-
 ## Specifies the width of the minimap.
 # Width = 100
-
-
 ## Configure the markdown preview feature
 # [Markdown]
 # Disable = false
-
 ## Specifying code highlighting styles
 # CodeHlStyle = "github"
-
-
 # [SideBar]
 ## Specifies whether to show the external sidebar or not.
 # Visible = false
-
 ## Specify the sidebar width
 # Width = 200
-
 ## Specify whether or not to draw a shadow under the sidebar.
 # DropShadow = false
-
 ## Specify the color to use when selecting items in the sidebar or palette in hexadecimal format
 # AccentColor = "#5596ea"
-
-
 # [FileExplore]
 ## Specify the maximum number of items to be displayed in the file explorer.
 # MaxDisplayItems = 30
-
-
 # [Workspace]
 ## This setting sets the format of the path string of CWD in the sidebar.
 ##  name: directoryname
 ##  full: /path/to/directoryname
 ##  minimum: /p/t/directoryname
 # PathStyle = "minimum"
-
 ## Specifies whether the last exited session should be restored at the next startup.
 # RestoreSession = false
