--- a/cli-tools/.config/xplr/config.yml
+++ b/cli-tools/.config/xplr/config.yml
@@ -1,4 +1,4 @@
-version: v0.5.12
+version: v0.8.4
 modes:
   builtin:
     default:
@@ -10,9 +10,9 @@ modes:
               - BashExec: |
                   PTH=$(cat "${XPLR_PIPE_DIRECTORY_NODES_OUT:?}" | awk -F / '{print $NF}' | sk --preview "pistol {}")
                   if [ -d "$PTH" ]; then
-                      echo "ChangeDirectory: $PWD/${PTH:?}" >> "${XPLR_PIPE_MSG_IN:?}"
+                      echo ChangeDirectory: $PWD/${PTH:?} >> "${XPLR_PIPE_MSG_IN:?}"
                   elif [ -f "$PTH" ]; then
-                      echo "FocusPath: $PWD/${PTH:?}" >> "${XPLR_PIPE_MSG_IN:?}"
+                      echo FocusPath: $PWD/${PTH:?} >> "${XPLR_PIPE_MSG_IN:?}"
                   fi
               - SwitchMode: default
           y:
@@ -23,7 +23,7 @@ modes:
             help: paste
             messages:
               - BashExecSilently: |
-                  xclip-pastefile > /dev/null && echo Explore >> "${XPLR_PIPE_MSG_IN:?}"
+                  xclip-pastefile > /dev/null && echo ExplorePwdAsync >> "${XPLR_PIPE_MSG_IN:?}"
           R:
             help: batch rename
             messages:
@@ -32,7 +32,7 @@ modes:
                   NODES=${SELECTION:-$(cat "${XPLR_PIPE_DIRECTORY_NODES_OUT:?}")}
                   if [ "$NODES" ]; then
                     mmv $NODES
-                    echo Explore >> "${XPLR_PIPE_MSG_IN:?}"
+                    echo ExplorePwdAsync >> "${XPLR_PIPE_MSG_IN:?}"
                   fi
           D:
             help: disk usage
