--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 nvim/.config/nvim/lua/dotfiles
 nvim/.config/nvim/plugin
+nvim/.config/nvim/init.lua
+
 hunter/.config/hunter/history
 hunter/.config/hunter/actions
 hunter/.config/hunter/~keys
 hunter/.config/hunter/previewers
+
 tmux/.config/tmux/plugins
+
 music/.config/mopidy/auth.json
+music/.config/ncmpcpp/error.log
+
 emacs/.config/doom/mail-ids.el
 emacs/.config/doom/config.el
+
 wezterm/.config/wezterm/wezterm.lua
-music/.config/ncmpcpp/error.log
