--- a/cli-tools/.config/xplr/config.yml
+++ b/cli-tools/.config/xplr/config.yml
@@ -31,16 +31,84 @@ modes:
                   SELECTION=$(cat "${XPLR_PIPE_SELECTION_OUT:?}")
                   NODES=${SELECTION:-$(cat "${XPLR_PIPE_DIRECTORY_NODES_OUT:?}")}
                   if [ "$NODES" ]; then
-                    mmv $NODES
+                    echo -e "$NODES" | pipe-rename
                     echo ExplorePwdAsync >> "${XPLR_PIPE_MSG_IN:?}"
                   fi
+              - Refresh
           D:
             help: disk usage
             messages:
               - BashExec: |
                   dua i
               - ClearScreen
+          ctrl-n:
+            help: new session
+            messages:
+              - BashExecSilently: |
+                  wezterm start -- xplr &
+              - Refresh
+          P:
+            help: paste.rs
+            messages:
+              - PopMode
+              - SwitchModeCustom: paste.rs
+              - Refresh
   custom:
+    paste.rs:
+      name: paste.rs
+      key_bindings:
+        on_key:
+          p:
+            help: paste
+            messages:
+              - BashExec: |
+                  PTH=$(basename "${XPLR_FOCUS_PATH:?}")
+                  DEST="${XPLR_SESSION_PATH:?}/paste.rs.list"
+                  curl --data-binary "@${PTH:?}" "https://paste.rs" | tee -a "${DEST:?}"
+                  echo
+                  read -p "[enter to continue]"
+              - PopMode
+              - Refresh
+          l:
+            help: list
+            messages:
+              - BashExec: |
+                  cat "${XPLR_SESSION_PATH:?}/paste.rs.list"
+                  echo
+                  read -p "[enter to continue]"
+              - PopMode
+              - Refresh
+          o:
+            help: search and open
+            messages:
+              - BashExec: |
+                  DEST="${XPLR_SESSION_PATH:?}/paste.rs.list"
+                  URL=$(fzf --preview "curl -s '{}'" < "${DEST:?}")
+                  if [ "$URL" ]; then
+                    OPENER=$(which xdg-open)
+                    ${OPENER:-open} "${URL:?}"
+                  fi
+              - PopMode
+              - Refresh
+          d:
+            help: search and delete
+            messages:
+              - BashExec: |
+                  DEST="${XPLR_SESSION_PATH:?}/paste.rs.list"
+                  URL=$(fzf --preview "curl -s '{}'" < "${DEST:?}")
+                  if [ "$URL" ]; then
+                    curl -X DELETE "${URL:?}"
+                    sd "${URL:?}\n" "" "${DEST:?}"
+                    echo
+                    read -p "[enter to continue]"
+                  fi
+              - PopMode
+              - Refresh
+          esc:
+            help: cancel
+            messages:
+              - PopMode
+              - Refresh
     copy:
       name: copy
       key_bindings:
