1) Add `paru.conf` 2) Remove nvim-dap-ui and AbbrevMan 3) Cleanup nvim-ts textobjects

--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -40,7 +40,7 @@ disabled = false
 
 [git_branch]
 format = "[$symbol $branch]($style) "
-symbol = ""
+symbol = ""
 
 [cmd_duration]
 format = "[$duration]($style) "
