0) fzf in shell 🎉 1) Remove tmux and hunter from gitignore 2) Format according to `expandtab` and `shiftwidth`, stylua ->    lua-format 3) zsh-vi-mode:❌ (interferes with zsh-autopair and fzf) 4) cleanup `.zshrc`, use better title-setting function

--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -1,6 +1,7 @@
 format = """
 ┌ $username\
 $hostname\
+$shell\
 $shlvl\
 $directory\
 $git_branch\
@@ -9,13 +10,11 @@ $git_state\
 $git_status\
 $hg_branch\
 $package\
-$python\
 $nix_shell\
 $cmd_duration\
 $status\
 $line_break\
 $jobs\
-$shell\
 └$character"""
 
 [character]
@@ -44,3 +43,8 @@ symbol = ""
 
 [cmd_duration]
 format = "[$duration]($style) "
+
+[shell]
+disabled = false
+zsh_indicator = ""
+format = "[$indicator ](cyan)"
