--- a/desktop/.config/sworkstyle/config.toml
+++ b/desktop/.config/sworkstyle/config.toml
@@ -14,10 +14,10 @@
 #   "{pattern}" = "{icon}"
 #
 # If it couldn't match something it will print:
-# 
-# WARN [sworkstyle:config] No match for "{app_name}" with title "{title}" 
 #
-# You can use {title} to do a generic matching 
+# WARN [sworkstyle:config] No match for "{app_name}" with title "{title}"
+#
+# You can use {title} to do a generic matching
 # You can use {app_name} to do a exact match
 
 fallback = ''
@@ -28,11 +28,12 @@ fallback = ''
 "nodejs" = { type = "generic", value = "" }
 "yarn" = { type = "generic", value = "" }
 "NVIM" = ""
+"emacs" = "Em"
 "mu4e" = ""
 "Slack" = ""
 "org.wezfurlong.wezterm" = ""
 "firefox" = ""
-"Element" = ""
+"nheko" = ""
 "meet" = ""
 "google" = ""
 "Private Browsing" = {type= "generic", value = ""}
