--- a/cli-tools/.config/pistol/pistol.conf
+++ b/cli-tools/.config/pistol/pistol.conf
@@ -1,5 +1,5 @@
 text/* bat --paging=auto --color=always %pistol-filename%
 text/html w3m -T text/html -dump %pistol-filename%
 inode/directory exa -l %pistol-filename%
-image/* wezterm imgcat %pistol-filename%
+image/* imv %pistol-filename%
 application/pdf zathura %pistol-filename%
