--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -5,8 +5,18 @@ include ~/.config/sway/theming
 include ~/.config/sway/mappings
 
 bar {
+    font Iosevka 12
         position top
-        swaybar_command waybar
+        status_command i3status-rs
+        colors {
+            separator #666666
+                background #222222
+                statusline #dddddd
+                focused_workspace #0088CC #0088CC #ffffff
+                active_workspace #333333 #333333 #ffffff
+                inactive_workspace #333333 #333333 #888888
+                urgent_workspace #2f343a #900000 #ffffff
+        }
 }
 
 include /etc/sway/config.d/*
