--- a/desktop/.config/sworkstyle/config.toml
+++ b/desktop/.config/sworkstyle/config.toml
@@ -28,23 +28,20 @@ fallback = ''
 "nodejs" = { type = "generic", value = "" }
 "yarn" = { type = "generic", value = "" }
 "NVIM" = ""
+"launcher" = ""
+"clipman" = ""
 "emacs" = "Em"
 "mu4e" = ""
-"Slack" = ""
-"org.wezfurlong.wezterm" = ""
+"org.wezfurlong.wezterm" = ">_"
 "firefox" = ""
-"nheko" = ""
 "meet" = ""
-"google" = ""
 "Private Browsing" = {type= "generic", value = ""}
 "ranger" = ""
 "xplr" = ""
 "gthumb" = ""
 "menu" = ""
-"calculator" = ""
-"transmission" = ""
-"videostream" = ""
+"fragments" = ""
 "mpv" = ""
-"music" = ""
+"ncmpcpp" = ""
 "discord" = "ﭮ"
 "org.pwmt.zathura" = ""
