--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -24,7 +24,7 @@ error_symbol = "[➜](bold red)"
 [git_status]
 format = '([\[$all_status$ahead_behind\]]($style) )'
 ahead = "↑${count}"
-diverged = "⇕:⇡${ahead_count}⇣${behind_count}"
+diverged = "⇕:↑${ahead_count}↓${behind_count}"
 behind = "↓${count}"
 modified = "!${count}"
 staged = "+${count}"
@@ -44,6 +44,7 @@ disabled = false
 [git_branch]
 format = "[$symbol $branch]($style) "
 symbol = ""
+style = "purple"
 
 [cmd_duration]
 format = "[$duration]($style) "
@@ -57,3 +58,6 @@ format = " [$indicator](bold green) "
 show_always = true
 style_user = "cyan"
 format = "[$user]($style)"
+
+[directory]
+read_only = " "
