--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -23,28 +23,25 @@ error_symbol = "[➜](bold red)"
 
 [git_status]
 format = '([\[$all_status$ahead_behind\]]($style) )'
-ahead = "↑${count}"
-diverged = "⇕:↑${ahead_count}↓${behind_count}"
-behind = "↓${count}"
+ahead = "↑ ${count}"
+diverged = "⇕ :↑ ${ahead_count}↓ ${behind_count}"
+behind = "↓ ${count}"
 modified = "!${count}"
 staged = "+${count}"
 untracked = "?${count}"
-deleted = "✘${count}"
+deleted = "✘ ${count}"
 renamed = "»${count}"
 stashed = "$${count}"
 conflicted = "=${count}"
-style = "green"
 
 [status]
 format = "[$symbol $status]($style) "
 symbol = "✘"
-style = "purple"
 disabled = false
 
 [git_branch]
 format = "[$symbol $branch]($style) "
 symbol = ""
-style = "purple"
 
 [cmd_duration]
 format = "[$duration]($style) "
@@ -56,7 +53,7 @@ format = " [$indicator](bold green) "
 
 [username]
 show_always = true
-style_user = "cyan"
+style_user = "yellow"
 format = "[$user]($style)"
 
 [directory]
