--- a/desktop/.config/mako/config
+++ b/desktop/.config/mako/config
@@ -1,4 +1,4 @@
-background-color=#191622
+background-color=#001e27
 font=JetBrains Mono 9.8
-border-color=#FFB86c
+border-color=#a57706
 border-radius=0
