--- a/cli-tools/.config/tig/config
+++ b/cli-tools/.config/tig/config
@@ -2,19 +2,19 @@ bind generic + !git commit --amend
 bind status P !git push
 bind main B !git rebase -i %(commit)
 
-color diff-stat            95    default
-color date                 172   default
-color "Merge: "            cyan  default
-color graph-commit         red   default
-color id                   167   default
-color "author "            95    default
-color "Commit: "           90    default
-color cursor               white 101     bold
-
-color palette-0            93    default
-color palette-1            95    default
-color palette-2            124   default
-color palette-7            90    default bold
-
-color delimiter            90    default
-color main-tracked         99    default bold
+# color diff-stat            95    default
+# color date                 172   default
+# color "Merge: "            cyan  default
+# color graph-commit         red   default
+# color id                   167   default
+# color "author "            95    default
+# color "Commit: "           90    default
+# color cursor               white 101     bold
+#
+# color palette-0            93    default
+# color palette-1            95    default
+# color palette-2            124   default
+# color palette-7            90    default bold
+#
+# color delimiter            90    default
+# color main-tracked         99    default bold
