--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -1,22 +1,24 @@
-input * xkb_options "caps:swapescape"
 include ~/.config/sway/autostart
 include ~/.config/sway/options
 include ~/.config/sway/theming
 include ~/.config/sway/mappings
 
 bar {
-    font Iosevka 11
-        position top
-        status_command i3status-rs
-        colors {
-            separator #666666
-            background #222222
-            statusline #dddddd
-            focused_workspace #0088CC #0088CC #ffffff
-            active_workspace #333333 #333333 #ffffff
-            inactive_workspace #333333 #333333 #888888
-            urgent_workspace #2f343a #900000 #ffffff
-        }
+    font Iosevka 12
+    position top
+    status_command i3status-rs
+    colors {
+        background #222222
+        separator  $base01
+        statusline $base04
+
+        # State             Border  BG      Text
+        focused_workspace   $base05 $base0D $base00
+        active_workspace    $base05 $base03 $base00
+        inactive_workspace  $base03 $base01 $base05
+        urgent_workspace    $base08 $base08 $base00
+        binding_mode        $base00 $base0A $base00
+    }
 }
 
 include /etc/sway/config.d/*
