--- a/desktop/.config/sworkstyle/config.toml
+++ b/desktop/.config/sworkstyle/config.toml
@@ -1,44 +1,19 @@
-# Config for sworkstyle
-#
-# You can rename workspaces based on the exact application names or by generic pattern.
-# When it could not match anything it will use the fallback.
-#
-# format:
-#
-#   "{pattern}" = { type = "generic" | "exact", value = "{icon}" }
-#
-# pattern: can either be the exact app_name or a piece of text contained in the title ignoring casing.
-# icon: Your beatifull icon
-#
-# You can also you the shorthand for exact matching using
-#   "{pattern}" = "{icon}"
-#
-# If it couldn't match something it will print:
-#
-# WARN [sworkstyle:config] No match for "{app_name}" with title "{title}"
-#
-# You can use {title} to do a generic matching
-# You can use {app_name} to do a exact match
-
 fallback = ''
 
 [matching]
 "github" = { type = "generic", value = "" }
-"npm" = { type = "generic", value = "" }
-"nodejs" = { type = "generic", value = "" }
-"yarn" = { type = "generic", value = "" }
-"NVIM" = ""
+"/ - NVIM/" = ""
 "launcher" = ""
-"clipman" = ""
 "emacs" = "Em"
 "mu4e" = ""
 "org.wezfurlong.wezterm" = ">_"
+"/Private Browsing/" = ""
 "firefox" = ""
 "meet" = ""
-"Private Browsing" = {type= "generic", value = ""}
 "ranger" = ""
 "xplr" = ""
 "gthumb" = ""
+"mirage" = ""
 "menu" = ""
 "fragments" = ""
 "mpv" = ""
