--- a/desktop/.config/i3status-rust/config.toml
+++ b/desktop/.config/i3status-rust/config.toml
@@ -31,7 +31,7 @@ interval = 5
 
 [[block]]
 block = "sound"
-on_click = "wezterm start ncpamixer"
+on_click = "pavucontrol"
 
 [[block]]
 block = "maildir"
