--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -1,5 +1,5 @@
 format = """
-┌ $username\
+\\[ $username \\]\
 $hostname\
 $shell\
 $shlvl\
@@ -15,11 +15,11 @@ $cmd_duration\
 $status\
 $line_break\
 $jobs\
-└$character"""
+$character"""
 
 [character]
-success_symbol = "[➜](bold green)"
-error_symbol = "[➜](bold red)"
+success_symbol = "[>>](bold green)"
+error_symbol = "[>>](bold red)"
 
 [git_status]
 format = '([\[$all_status$ahead_behind\]]($style) )'
