--- a/desktop/.config/i3status-rust/config.toml
+++ b/desktop/.config/i3status-rust/config.toml
@@ -1,10 +1,5 @@
 icons = "material-nf"
-
-[theme]
-name = "solarized-dark"
-
-[theme.overrides]
-separator = ""
+theme = "iceberg"
 
 [[block]]
 block = "focused_window"
