--- a/desktop/.config/mako/config
+++ b/desktop/.config/mako/config
@@ -1,4 +1,4 @@
-background-color=#001e27
+background-color=#161822
 font=JetBrains Mono 9.8
-border-color=#a57706
+border-color=#D18771
 border-radius=0
