--- a/desktop/.config/i3status-rust/themes/iceberg.toml
+++ b/desktop/.config/i3status-rust/themes/iceberg.toml
@@ -2,12 +2,12 @@ idle_bg = "#161822"
 idle_fg = "#C7C9D1"
 info_bg = "#85A0C7"
 info_fg = "#161822"
-good_bg = "#2D2F23"
-good_fg = "#C7C9D1"
-warning_bg = "#3E1E14"
-warning_fg = "#C7C9D1"
-critical_bg = "#430E0E"
-critical_fg = "#C7C9D1"
+good_bg = "#b4be82"
+good_fg = "#161822"
+warning_bg = "#D18771"
+warning_fg = "#161822"
+critical_bg = "#e27878"
+critical_fg = "#161822"
 separator = ""
 separator_bg = "auto"
 separator_fg = "auto"
