--- a/desktop/.config/i3status-rust/themes/iceberg.toml
+++ b/desktop/.config/i3status-rust/themes/iceberg.toml
@@ -2,7 +2,7 @@ idle_bg = "#161822"
 idle_fg = "#C7C9D1"
 info_bg = "#85A0C7"
 info_fg = "#161822"
-good_bg = "#b4be82"
+good_bg = "#8D9468"
 good_fg = "#161822"
 warning_bg = "#D18771"
 warning_fg = "#161822"
