--- a/fonts/.config/fontconfig/conf.d/71-Regular-fonts.conf
+++ b/fonts/.config/fontconfig/conf.d/71-Regular-fonts.conf
@@ -5,7 +5,7 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Inter</family>
+      <family>IBM Plex Sans</family>
     </prefer>
   </alias>
 
